# py-stream

./: LICENSE  README.md  pyproject.toml  pythonstream.py  stream.py  transformation.py
src/: pystream.py  transformation.py
tests/: test_eager.py  test_lazy.py
